# game

./: README.md
c++game/: 111  CMakeLists.txt  main.cpp
c++game/SDL2_image-devel-2.8.0-mingw/SDL2_image-2.8.0/i686-w64-mingw32/lib/: libSDL2_image.la
c++game/SDL2_image-devel-2.8.0-mingw/SDL2_image-2.8.0/i686-w64-mingw32/lib/cmake/SDL2_image/: sdl2_image-config-version.cmake
c++game/SDL2_image-devel-2.8.0-mingw/SDL2_image-2.8.0/i686-w64-mingw32/lib/pkgconfig/: SDL2_image.pc
c++game/SDL2_image-devel-2.8.0-mingw/SDL2_image-2.8.0/x86_64-w64-mingw32/lib/: libSDL2_image.la
c++game/SDL2_image-devel-2.8.0-mingw/SDL2_image-2.8.0/x86_64-w64-mingw32/lib/pkgconfig/: SDL2_image.pc
c++game/photo/Handpainted Platform Tileset _ OpenGameArt.org_files/: js_WNcjX9C7AzUw-N1abXrdZLpLq71PtBe1dISODcGzqx8.js
c++game/photo/Nature tileset _ OpenGameArt.org_files/: css_ff3tJc71Z402cxcrQprs7GRkOQJuOqgs2LWeSWIHHR0.css
